fixed unlisted list spacing to better reflect bullet points

--- a/css/layout.css
+++ b/css/layout.css
@@ -45,6 +45,10 @@ footer{
     max-width: 1300px;
 }
 
+section ul{
+    padding-left: 2rem;
+}
+
 #container{
     display: flex;
     flex-flow: row;
